@@ -1,3 +1,7 @@
+2011-12-08  Teresa Johnson  <tejohnson@google.com>
+
+	* gcc.target/i386/movdi-rex64.c: New.
+
 2011-12-08  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline
